[package]
name = "luabundler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
clap = "4.4.7"
colored = "2.0.4"
darklua = "0.11.0"
full_moon = "0.18.1"
regex = "1.10.2"
stacker = "0.1.15"
tokio = { version = "1.33.0", features = ["full"] }
